--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ readme = "README.md"
 requires-python = ">= 3.8"
 
 [project.scripts]
-"convert-bibkey" = "mathscinet_bibkey:main"
+"mathscinet-bibkey" = "mathscinet_bibkey:main"
 
 [build-system]
 requires = ["hatchling"]
